welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:19: error: not found: value faireMarque
	faireMarque();
        ^SlugSnail:30: error: not found: value faireMarque
	faireMarque();
        ^