welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def isFacingTrail():Boolean = {
var color:Boolean= false;
if (!estFaceMur()){
	avance();
	
    if(getCouleurSol==Color.pink || getCouleurSol==Color.orange){
    color = true 	
    
    }
   recule();
}
	
return color     
}
def hunt(){
	while(!estSurBiscuit()){
if (isFacingTrail()){
	faireMarque();
	avance();
	}

else {gauche();
}

    
}
if(estSurBiscuit()){
	prendBiscuit();
	faireMarque();
	}
}
	

